--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,6 +4,10 @@ galaxy_info:
   description: Install zfs from buster backports.
   license: license MIT
   min_ansible_version: 2.8
+  platforms:
+  - name: Debian
+    versions:
+      - buster
   galaxy_tags:
     - debian
     - buster
