--- a/tasks/tasks.yml
+++ b/tasks/tasks.yml
@@ -19,7 +19,7 @@
 - name: Install zfs-dkms from backports
   apt:
     name="{{ pkgs }}"
-    state="latest"
+    state="present"
     update_cache=False
     install_recommends=False
     default_release=buster-backports
@@ -35,7 +35,7 @@
 - name: Install zfsutils-linux from backports
   apt:
     name="{{ pkgs }}"
-    state="latest"
+    state="present"
     update_cache=False
     install_recommends=False
     default_release=buster-backports
